deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seat-allocator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seat-allocator
  template:
    metadata:
      labels:
        app: seat-allocator
    spec:
      containers:
        - name: seat-allocator
          image: bavesha/seat-allocator:latest
          ports:
            - containerPort: 8000
