service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seat-allocator-service
spec:
  selector:
    app: seat-allocator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
